# Property-based-testing

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  schemas.py
tests/: test_crud.py  test_property_based.py
